[package]
name = "depioneer-share-pool"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "AGFRndPmfcdYfPf1rqbkuY6Ku18UHUVnLoz2JEuC768r"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "^0.4.2"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "~1.18"
thiserror = "^1.0"
mpl-token-metadata = "4.1.2"
